3.0914:
 - UI : Evein draining re-added.
 - Fix: Effective level could be too high.
 - Fix: AI have a better chance to train a spy.
 - Mod: Subsidising buildings totals up more consistently.

3.0913:
 - Add: Insurrect Value & SRCS happiness cost added to PCC output.
 - UI : Fix screen scrolling.
 - UI : Automatically load new captcha on failure (thanks, vortigon)
 - UI : New buildings have level visible immediately if user wants levels always displayed.
 - Mod: Limit shipyards to 30 days' queue.
 - Add: Constructing added to resource bar.
 - UI : Stop the "Trade Ministry is offline" message when repairing TM
 - UI : Added self-destruct button back.
 - Fix: Modify sanitize to do initialize of stored values last.
 - UI : New buildings will get level showing if user has asked for it.
 - UI : Fix announcement window for users as logging in.
 - UI : Fix planet jumping from links

3.0912:
 - Fix: get_fleet_for returns berth appropriate ships.
 - Fix: embassy stash could be exploited.
 - Fix: trade ministry's supply chain tab now works after selecting ship tab.
 - Add: build_ships API to automatically spread out ship building across multiple yards.
 - Add: per-colony notes in PCC
 - Fix: Oracles now work even during colonisation (60-second timer).
 - Fix: Starter Zone limit enforced.
 - Mod: Warehouses no longer use affinities or storage boosts.
 - Add: RPC counter always displayed in UI
 - Fix: Can now change station owner to oneself (UI)
 - Add: homeworld highlighted and always at the top of the public profile
 - Mod: Spies from tech levels above 15 on Jackpot are bounced automatically instead of jailed.
 - Fix: allow_bhg_by_alliance rejection fixed.
 - Fix: Supply Pods don't count toward population.
 - Add: abandoned colony, fissure explosion, and fissure repair medals
 - Add: get_buildable_locations API for bodies (Jazz request)
 - Add: Happy citizens can build faster.
 - Add: image field to ship lists
 - Fix: Sitters cannot join alliances.