@@ -611,7 +611,7 @@ A session id.
 
 
 
-=head2 boost_storage ( session_id )
+=head2 boost_storage ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts storage (all 5 types) on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -628,7 +628,7 @@ A session id.
 
 
 
-=head2 boost_food ( session_id )
+=head2 boost_food ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts food production on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -644,7 +644,7 @@ Throws 1011.
 A session id.
 
 
-=head2 boost_water ( session_id )
+=head2 boost_water ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts water production on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -660,7 +660,7 @@ Throws 1011.
 A session id.
 
 
-=head2 boost_energy ( session_id )
+=head2 boost_energy ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts energy production on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -676,7 +676,7 @@ Throws 1011.
 A session id.
 
 
-=head2 boost_ore ( session_id )
+=head2 boost_ore ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts ore production on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -692,7 +692,7 @@ Throws 1011.
 A session id.
 
 
-=head2 boost_happiness ( session_id )
+=head2 boost_happiness ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts happiness production on all planets for 7 days. If a boost is already underway, calling again will add 7 more days.
 
@@ -708,7 +708,7 @@ Throws 1011.
 A session id.
 
 
-=head2 boost_building ( session_id )
+=head2 boost_building ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts build queues on all planets for 7 days. If a boost is already underway, calling again will add 7 more days. It will not boost builds currently under way, only new builds added to a build queue.
 
@@ -724,7 +724,7 @@ Throws 1011.
 A session id.
 
 
-=head2 spy_training_boost ( session_id )
+=head2 boost_spy_training ( session_id [, weeks] )
 
 Spends 5 essentia, and boosts spy training speed on all planets 50% for 7 days. If a boost is already underway, calling again will add 7 more days. Unlike other boosts, this one will boost spies currently in specialist training.
 
