@@ -3,6 +3,7 @@
  - Fix: Effective level could be too high.
  - Fix: AI have a better chance to train a spy.
  - Mod: Subsidising buildings totals up more consistently.
+ - Mod: Boost RPCs can take an optional weeks parameter.
 
 3.0913:
  - Add: Insurrect Value & SRCS happiness cost added to PCC output.
